// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Bold 1`] = `
Object {
  "items": Array [
    "test",
  ],
  "type": "Bold",
}
`;

exports[`Parser Bold 2`] = `
Object {
  "items": Array [
    " test * \\\\ ",
    Object {
      "items": Array [
        "and*",
      ],
      "type": "Italic",
    },
    " so on",
  ],
  "type": "Bold",
}
`;

exports[`Parser Document 1`] = `
Object {
  "items": Array [
    Object {
      "items": Array [
        "
# Header",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "items": Array [
        "
block
# so not a header",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "items": Array [
        "
* test
* test",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "items": Array [
        "
Paragraph and something else. sentence
test ",
        Object {
          "items": Array [
            "bold",
          ],
          "type": "Bold",
        },
        " ",
        Object {
          "items": Array [
            "italic",
          ],
          "type": "Italic",
        },
        " ",
        Object {
          "items": Array [
            Object {
              "items": Array [
                "bold italic",
              ],
              "type": "Bold",
            },
          ],
          "type": "Italic",
        },
        " ",
        Object {
          "items": Array [
            "code",
          ],
          "type": "Mono",
        },
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "items": Array [
        "
",
        Object {
          "items": Array [],
          "type": "Mono",
        },
        "\`js
 code block
",
        Object {
          "items": Array [],
          "type": "Mono",
        },
        "\`",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "items": Array [
        "
> some blockquote
> quote",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "items": Array [
        "
One more paragraph. ",
        Object {
          "items": Array [
            Object {
              "items": Array [
                "link",
              ],
              "type": "LinkName",
            },
            Object {
              "items": Array [
                "http://link.to/123?321",
              ],
              "type": "LinkAddress",
            },
          ],
          "type": "Link",
        },
      ],
      "type": "Paragraph",
    },
    "

",
  ],
  "type": "Document",
}
`;

exports[`Parser Header 1`] = `
Object {
  "items": Array [
    " AHAHAH *test oh no* !",
  ],
  "type": "Header",
}
`;

exports[`Parser Italic 1`] = `
Object {
  "items": Array [
    "test",
  ],
  "type": "Italic",
}
`;

exports[`Parser Italic 2`] = `
Object {
  "items": Array [
    " test _ and so on ",
    Object {
      "items": Array [
        "_test",
      ],
      "type": "Bold",
    },
  ],
  "type": "Italic",
}
`;

exports[`Parser Link 1`] = `
Object {
  "items": Array [
    Object {
      "items": Array [
        "awesome link",
      ],
      "type": "LinkName",
    },
    Object {
      "items": Array [
        "http://amazing.com",
      ],
      "type": "LinkAddress",
    },
  ],
  "type": "Link",
}
`;

exports[`Parser Mono 1`] = `
Object {
  "items": Array [
    "test",
  ],
  "type": "Mono",
}
`;

exports[`Parser Mono 2`] = `
Object {
  "items": Array [
    " test \` \\\\ _and*_ so on*",
  ],
  "type": "Mono",
}
`;

exports[`Parser Paragraph 1`] = `
Object {
  "items": Array [
    "
      AHAHAH ",
    Object {
      "items": Array [
        "test oh no",
      ],
      "type": "Bold",
    },
    " !
      go go ",
    Object {
      "items": Array [
        "power cows",
      ],
      "type": "Italic",
    },
    " ",
    Object {
      "items": Array [
        "code",
      ],
      "type": "Mono",
    },
    "
      ",
  ],
  "type": "Paragraph",
}
`;
